2024-01-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/regression/MakeList,
	  support/regression/tests/bug-3601.c:
	  Fix bug #3601.

2024-01-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/strnlen.c,
	  support/regression/tests/wcsnlen.c:
	  Fix bug #3812.

2024-01-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Improve ldw use in f8 codegen.

2024-01-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8mch.c,
	  sim/ucsim/src/sims/f8.src/glob.cc:
	  f8 ldw instruction fixes for assembler and simulator.

2024-12-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* .version,
	  doc/INSTALL.txt,
	  doc/sdccman.lyx,
	  sdcc.spec:
	  Prepare for SDCC 4.5.0 release.

2024-12-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  support/regression/tests/largeoddstruct.c.in:
	  Fix bug #3804.

2024-12-31 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Update section 3.1 "Standard Compliance" and improve readability.
	* support/scripts/sdcclogo.svg,
	  support/scripts/sdcclogo_bakedtext.svg,
	  support/scripts/sdcclogo_simplified.svg,
	  support/scripts/sdcclogo_simplified_bakedtext.svg:
	  Add logo SVGs for future use, see RFE #813.

2024-12-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c,
	  support/regression/tests/bug-3799.c:
	  Fix bug #3800.
	* support/regression/tests/bug-3013.c:
	  Test for non-longer-reproducible bug #3013.

2024-12-22 Benedikt Freisen <b.freisen AT gmx.net>

	* device/lib/strtoull.c,
	  device/lib/wcstoul.c,
	  device/lib/wcstoull.c:
	  Hackfix and re-enable strtoull and wcstoull, see bug #3798.

2024-12-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCast.c,
	  support/regression/tests/structinit.c.in,
	  .version:
	  struct / union in initializer, RFE #901, RFE #797.

2024-12-20 Philipp Klaus Krause <philipp@colecovision.eu>
